fixed sticky navbar and content spacing under it with -7rem in css

--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -1,9 +1,5 @@
-/* #root {
-  margin: 0;
-} */
-
 .homepage {
-  margin-top: 0;
+  margin-top: -7rem;
   z-index: 2;
   display: grid;
   height: 100vh;
@@ -35,6 +31,10 @@
   align-items: flex-end;
   grid-area: credit;
   z-index: 3;
+}
+
+.credit p {
+  font-size: 12px;
 }
 
 #login-homepage {
